--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@harryhamlin/readme-generator": "^1.0.4",
     "console.table": "^0.10.0",
     "express": "^4.18.2",
     "inquirer": "^8.2.4",
